--- a/.github/workflows/github-action-variable-03.yml
+++ b/.github/workflows/github-action-variable-03.yml
@@ -11,3 +11,9 @@ jobs:
     steps:
       - name: "Hello, Var_Test"
         run: echo "Hello, ${{vars.VAR_TEST}}"
+
+  check-secrets-context:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Hello, Secret_Test"
+        run: echo "Hello, ${{secrets.SECRET_TEST}}"
