--- a/.github/workflows/github-action-variable-03.yml
+++ b/.github/workflows/github-action-variable-03.yml
@@ -3,7 +3,7 @@
 name: Test Github Actions variable-01
 run-name: Run Github Actions var, secret
 on:
-  push
+  workflow_dispatch
 
 jobs:
   check-vars-context:
