--- a/.github/workflows/github-action-variable-04.yml
+++ b/.github/workflows/github-action-variable-04.yml
@@ -15,4 +15,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print input data
-        run: echo "Hello, ${{girhub.event.inputs.name}}"
+        run: echo "Hello, ${{github.event.inputs.name}}"
