--- a/.github/workflows/github-action-checkout-01.yml
+++ b/.github/workflows/github-action-checkout-01.yml
@@ -16,4 +16,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: checkout-dir
+      
+      
+      - name: Github Actions Checkout(others repository)
+        uses: actions/checkout@v4
+        with:
+          repository: actions/checkout
+          path: other-repo
       - run: ls -al
